crates/observed_macros/src/snapshots/observed_macros__event__tests__metric_value_field_can_exclude_from_log.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for OutgoingRequest {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "outgoing_request",
            ::core::option::Option::Some(::core::any::TypeId::of::<OutgoingRequest>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "outgoing_request",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            true,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "method",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("method"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.method, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "duration",
                    ::core::option::Option::None,
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::instrument(
                            "duration",
                            ::observed::metadata::MetricDescription::new(
                                "outgoing_request",
                                ::observed::metadata::InstrumentKind::Histogram,
                                "",
                                "",
                            ),
                        ),
                    ),
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(self.duration.clone()),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
