crates/observed_macros/src/snapshots/observed_macros__event__tests__option_field_custom_fill_when_none.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for HttpRequest {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "http.request",
            ::core::option::Option::Some(::core::any::TypeId::of::<HttpRequest>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "http.request",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "method",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("method"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.method, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "user_agent",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("user_agent"),
                    ),
                    ::core::option::Option::None,
                );
                match self.user_agent.as_ref() {
                    ::core::option::Option::Some(__val) => {
                        visitor(
                            &FIELD_DESC,
                            &|_engine| ::observed::Value::from_redacted(__val, _engine),
                        )?;
                    }
                    ::core::option::Option::None => {
                        visitor(&FIELD_DESC, &|_| ::observed::Value::from("unknown"))?;
                    }
                }
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
