crates/observed_macros/src/snapshots/observed_macros__event__tests__unit_struct_event.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for NoV2Workloads {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "workload.disabled",
            ::core::option::Option::Some(::core::any::TypeId::of::<NoV2Workloads>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "workload.disabled",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
