crates/observed_macros/src/snapshots/observed_macros__event__tests__updowncounter_with_signed_field.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for QueueDelta {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "queue.delta",
            ::core::option::Option::Some(::core::any::TypeId::of::<QueueDelta>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            true,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "delta",
                    ::core::option::Option::None,
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::instrument(
                            "delta",
                            ::observed::metadata::MetricDescription::new(
                                "queue.size.delta",
                                ::observed::metadata::InstrumentKind::UpDownCounter,
                                "",
                                "",
                            ),
                        ),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.delta.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
